🔒️Implementación seguridad