@@ -3,6 +3,7 @@ package com.example.granja_gaia.security;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -32,14 +33,21 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> {
                     auth.requestMatchers(
-                            "/api/auth/**",
-                            "/animales/**",
-                            "/cultivos/**",
+                            "/api/usuarios/registro/cliente",
+                            "/api/usuarios/login",
                             "/swagger-ui/**",
-                            "/v3/api-docs/**"
+                            "/v3/api-docs/**",
+                            "/api-docs/**",
+                            "/api/clientes/**",
+                            "/api/usuarios/registro/admin" // temporal
                     ).permitAll();
 
-                    auth.requestMatchers("/admin/**").hasAuthority("ADMIN");
+                    //CREAR LUEGO CUANDO CONECTE EL FRONTEND, AUTORIZACIONES SOLO ADMIN
+//                            .requestMatchers("/api/clientes/**").hasAnyAuthority("admin");
+
+
+
+                    // Todos los demás endpoints requieren autenticación
                     auth.anyRequest().authenticated();
                 })
                 .sessionManagement(session ->
@@ -53,10 +61,16 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:4200",    // Angular
+                "http://localhost:3000",   // React
+                "http://localhost:8080"     // Spring Boot
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
         configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
